<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backgroundImageView"
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:background="@drawable/profile_background"
            android:rotationX="180"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/profileImageMotionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="111dp"
            android:contentDescription="@string/profile_image_content_description"
            android:background="@drawable/ic_baseline_profile_circle_150"
            android:clipChildren="true"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/namePositionLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImageMotionButton">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/edit_profile_hint_enter_your_name"
                android:inputType="textPersonName"
                android:text=""
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/positionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#494949"
                android:textStyle="italic" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            app:cardBackgroundColor="#F2F2F2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/namePositionLinearLayout">

            <RelativeLayout
                android:id="@+id/userDetailsRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="25dp"
                app:layout_constraintTop_toBottomOf="@+id/namePositionLinearLayout">

                <TextView
                    android:id="@+id/contactTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/profile_text_view_contact_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/contactTextView"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="?android:attr/listDivider"
                    android:gravity="center" />

                <EditText
                    android:id="@+id/phoneNumberEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/divider"
                    android:layout_marginTop="20dp"
                    android:autofillHints="phone"
                    android:drawablePadding="15dp"
                    android:gravity="center"
                    android:hint="@string/edit_profile_hint_enter_your_phone_number"
                    android:inputType="phone"
                    android:minHeight="48dp"
                    android:paddingHorizontal="10dp"
                    android:text=""
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:drawableLeftCompat="@drawable/ic_baseline_call_24"
                    app:drawableTint="#000000"
                    tools:ignore="RtlCompat" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/phoneNumberEditText"
                    android:layout_marginTop="20dp"
                    android:autofillHints="emailAddress"
                    android:drawablePadding="15dp"
                    android:gravity="center"
                    android:hint="@string/edit_profile_hint_enter_your_email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:paddingHorizontal="10dp"
                    android:text=""
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:drawableLeftCompat="@drawable/ic_baseline_email_24"
                    app:drawableTint="#000000"
                    tools:ignore="RtlCompat" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/saveChangeButton"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/login_button"
            android:text="@string/edit_profile_button_save_changes"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:initialCornerAngle="27dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_padding="6dp"
            app:spinning_bar_width="4dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>