<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Profile">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="273dp"
        android:background="@drawable/profile_background"
        android:rotationX="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/addEmployeeImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/profile_image_button_content_description_add_employee"
        android:elevation="8dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_person_add_36"
        app:tint="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.utils.widget.MotionButton
                android:id="@+id/profileImageMotionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="111dp"
                android:background="@drawable/ic_baseline_profile_circle_150"
                android:clipChildren="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/cameraImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                android:padding="3dp"
                android:src="@drawable/ic_baseline_photo_camera_28"
                app:layout_constraintBottom_toBottomOf="@+id/profileImageMotionButton"
                app:layout_constraintEnd_toEndOf="@+id/profileImageMotionButton"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/profileImageMotionButton"
                app:layout_constraintTop_toTopOf="@+id/profileImageMotionButton"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <LinearLayout
                android:id="@+id/namePositionLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileImageMotionButton">

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/positionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#494949"
                    android:textStyle="italic" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                app:cardBackgroundColor="#F2F2F2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/namePositionLinearLayout">

                <RelativeLayout
                    android:id="@+id/userDetailsRelativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="25dp"
                    app:layout_constraintTop_toBottomOf="@+id/namePositionLinearLayout">

                    <TextView
                        android:id="@+id/contactTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/profile_text_view_contact_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/divider"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_below="@+id/contactTextView"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:background="?android:attr/listDivider"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/phoneNumberTextView"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/divider"
                        android:layout_marginTop="20dp"
                        android:drawablePadding="15dp"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:text=""
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:drawableLeftCompat="@drawable/ic_baseline_call_24"
                        app:drawableTint="#000000"
                        tools:ignore="RtlCompat" />

                    <TextView
                        android:id="@+id/emailTextView"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/phoneNumberTextView"
                        android:layout_marginTop="20dp"
                        android:drawablePadding="15dp"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:text=""
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:drawableLeftCompat="@drawable/ic_baseline_email_24"
                        app:drawableTint="#000000"
                        tools:ignore="RtlCompat" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:id="@+id/buttonLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                android:gravity="center">

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/editProfileButton"
                    android:layout_width="149dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_button"
                    android:text="@string/profile_button_edit_profile"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:initialCornerAngle="27dp"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="6dp"
                    app:spinning_bar_width="4dp" />

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/changePasswordButton"
                    android:layout_width="149dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/login_button"
                    android:text="@string/profile_button_change_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:initialCornerAngle="27dp"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="6dp"
                    app:spinning_bar_width="4dp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>
